--- a/scavenger/client/templates/login.html
+++ b/scavenger/client/templates/login.html
@@ -1,5 +1,6 @@
 <template name="login">
-    <form>
+  <br>
+    <form class="eachLogin">
         <input type="email" name="loginEmail">
         <input type="password" name="loginPassword">
         <input type="submit" value="Login">
