--- a/scavenger/client/templates/register.html
+++ b/scavenger/client/templates/register.html
@@ -1,5 +1,5 @@
 <template name="register">
-    <form>
+    <form class="eachLogin">
         <input type="email" name="registerEmail">
         <input type="password" name="registerPassword">
         <input type="submit" value="Register">
