--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -1,6 +1,6 @@
 <template name='dashboard'>
-  <p>You're logged in.</p>
-  <div class="logout">LOG THE FUCK OUT</div>
+  <p>You're logged in, {{currentUser._id}}.</p>
+  <div class="logoutBtn">LOG THE FUCK OUT</div>
 
   <div class="dash">
     <br><br>
