--- a/scavenger/client/templates/login.html
+++ b/scavenger/client/templates/login.html
@@ -1,6 +1,6 @@
 <template name="login">
   <br>
-    <form class="eachLogin">
+    <form class="eachLogin" id="userLoginFrm">
         <input type="email" name="loginEmail">
         <input type="password" name="loginPassword">
         <input type="submit" value="Login">
