--- a/scavenger/client/templates/register.html
+++ b/scavenger/client/templates/register.html
@@ -1,7 +1,12 @@
 <template name="register">
-    <form class="eachLogin">
-        <input type="email" name="registerEmail">
-        <input type="password" name="registerPassword">
-        <input type="submit" value="Register">
+  Please use the same e-mail address you used to<br> register for the scavenger hunt to sign up<br> for this app! <br><br>
+    <form class="eachLogin" id="userRegFrm">
+        <input type="email" name="registerEmail" placeholder="E-mail Address">
+        <br><br>
+        <input type="password" name="registerPassword" placeholder="Choose A Password">
+        <br><br>
+        <input type="submit">
+        <br><br>
+        <div class="cancelReg">Cancel</div>
     </form>
 </template>
