--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -2,13 +2,61 @@ body{
   background: #A1D7D9;
   text-align: center;
 }
-.login{
+.off{
+  display: none;
+}
+.loginArea{
   display: inline-block;
-  border: green 1px solid;
+  //border: green 1px solid;
+  height: 300px;
+  font-size: 24px;
 }
 .eachLogin{
-  float: left;
-  border: blue 1px solid;
+  text-align: center;
+  //border: blue 1px solid;
+  height: 70px;
+  font-size: 36px;
+  input{
+    height:60px;
+    width: 300px;
+    font-size: 34px;
+  }
+}
+.needRegBtn{
+  display: inline-block;
+  background: rgb(115, 148, 141);
+  width: 300px;
+  padding:15px;
+  text-align: center;
+}
+.modalGrey{
+  background: rgba(115, 148, 141, .5);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left:0px;
+  z-index: 1;
+}
+.modalBox{
+  background: #A1D7D9;
+  position: absolute;
+  top: 35%;
+  left: 25%;
+  width: 50%;
+  height: 30%;
+  // margin-top: 40%;
+  // margin-left: 25%;
+  z-index: 15;
+  input{
+    height:60px;
+    width: 300px;
+    font-size: 34px;
+    z-index: 17;
+  }
+}
+.logoutBtn{
+  border: purple 1px solid;
 }
 .heroImg{
   width:100%;
@@ -26,9 +74,9 @@ body{
   border: red 1px solid;
   //text-align: center;
 }
-.anwserMe{
+.anwserTheQ{
   background: white;
-  border: salmon 1px solid;
+  border: green 1px solid;
   height:100%;
   float:right;
   width: 20%;
