Add questionslist collection

--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -1,5 +1,5 @@
 <template name='dashboard'>
-  <p>You're logged in, {{currentUser._id}}.</p>
+  <p>You're logged in, {{currentUser.profile.name}}.</p>
   <div class="logoutBtn">LOG THE FUCK OUT</div>
 
   <div class="dash">
