add questions appear based on user group

--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -5,7 +5,11 @@
   <div class="dash">
     <br><br>
     <div class="allQuestions">
-      {{> question}}
+      {{#each questions}}
+
+          <li class='question'>{{question}}</li>
+
+        {{/each}}
     </div>
   </div>
 
