--- a/scavenger/client/templates/login.html
+++ b/scavenger/client/templates/login.html
@@ -1,8 +1,8 @@
 <template name="login">
   <br>
     <form class="eachLogin" id="userLoginFrm">
-        <input type="email" name="loginEmail">
-        <input type="password" name="loginPassword">
+        <input type="email" name="loginEmail" placeholder="Email Address">
+        <input type="password" name="loginPassword" placeholder="Password">
         <input type="submit" value="Login">
     </form>
 </template>
