--- a/scavenger/client/templates/question.html
+++ b/scavenger/client/templates/question.html
@@ -2,7 +2,10 @@
 
   <div class="qBox">
 
-    This is a question, click it to anwser the question.
+    <span class="qBoxLeft">1.</span>
+      <span class="qBoxMiddle">
+        The question in question is all about quesitons who knows what the question will be after it has become  question?The question in question is all about quesitons.
+      </span>
     <span class="anwserTheQ">Click to anwser</span>
 
   </div>
