--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -50,28 +50,63 @@ body {
     z-index: 17; }
 
 .logoutBtn {
-  border: purple 1px solid; }
+  float: left;
+  background: purple;
+  height: 100%;
+  width: 10%;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 24px; }
 
 .heroImg {
   width: 100%; }
 
-.qBox {
-  width: 80%;
-  height: 100px;
-  margin-left: 10%;
-  background: #bfe4dc;
-  border: yellow 1px solid; }
-
 .allQuestions {
   display: inline-block;
-  width: 100%;
-  border: red 1px solid; }
+  width: 100%; }
+
+.qBox {
+  position: relative;
+  width: 80%;
+  height: 150px;
+  margin-left: 10%;
+  background: #bfe4dc;
+  display: block; }
+
+.qBoxLeft {
+  position: absolute;
+  padding-top: 30px;
+  box-sizing: border-box;
+  top: 0px;
+  left: 0px;
+  background: white;
+  font-size: 72px;
+  height: 100%;
+  width: 20%; }
+
+.qBoxMiddle {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 24px;
+  width: 60%;
+  height: 100%;
+  padding-top: 20px; }
 
 .anwserTheQ {
+  font-size: 36px;
+  position: absolute;
+  box-sizing: border-box;
   background: white;
-  border: green 1px solid;
   height: 100%;
-  float: right;
-  width: 20%; }
+  width: 20%;
+  padding-top: 50px; }
+
+.dashBanner {
+  height: 150px;
+  width: 100%;
+  vertical-align: middle;
+  background: #2856a3;
+  font-size: 36px; }
 
 /*# sourceMappingURL=main.css.map */
