--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -56,28 +56,70 @@ body{
   }
 }
 .logoutBtn{
-  border: purple 1px solid;
+  // border: purple 1px solid;
+  float: left;
+  background: purple;
+  height:100%;
+  width: 10%;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 24px;
 }
 .heroImg{
   width:100%;
 }
-.qBox{
-  width:80%;
-  height: 100px;
-  margin-left: 10%;
-  background: rgb(191, 228, 220);
-  border: yellow 1px solid;
-}
 .allQuestions{
   display: inline-block;
   width: 100%;
-  border: red 1px solid;
-  //text-align: center;
+  //border: red 1px solid;
+}
+.qBox{
+  position: relative;
+  width: 80%;
+  height: 150px;
+  margin-left: 10%;
+  background: rgb(191, 228, 220);
+  display: block;
+  //border: yellow 1px solid;
+}
+.qBoxLeft{
+  //border: green 1px solid;
+  //box-sizing: border-box;
+  position: absolute;
+  padding-top: 30px;
+  box-sizing: border-box;
+  top:0px;
+  left:0px;
+  background: white;
+  font-size: 72px;
+  height:100%;
+  width: 20%;
+  //padding-top: 35px;
+}
+.qBoxMiddle{
+  //border: red 1px solid;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 24px;
+  width: 60%;
+  height:100%;
+  padding-top: 20px;
 }
 .anwserTheQ{
+  //border: green 1px solid;
+  font-size: 36px;
+  position: absolute;
+  box-sizing: border-box;
   background: white;
-  border: green 1px solid;
   height:100%;
-  float:right;
   width: 20%;
+  padding-top: 50px;
+}
+.dashBanner{
+  height: 150px;
+  width: 100%;
+  vertical-align: middle;
+  background: rgb(40, 86, 163);
+  font-size:36px;
 }
