schema added for question, begin work on answer template

--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -109,4 +109,7 @@ body {
   background: #2856a3;
   font-size: 36px; }
 
+.question {
+  font-size: 10em; }
+
 /*# sourceMappingURL=main.css.map */
