--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -10,7 +10,7 @@
     <div class="allQuestions">
       {{#each questions}}
 
-        <div class='question'>{{questionNumber}}</div>
+        <div class='question'>{{question}}</div>
 
       {{/each}}
 
