change routing system, dynamically show questoins in own view/template

--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -110,6 +110,7 @@ body {
   font-size: 36px; }
 
 .question {
-  font-size: 10em; }
+  font-size: 5em;
+  border: solid thin black; }
 
 /*# sourceMappingURL=main.css.map */
