--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -1,5 +1,5 @@
-<template name="anwserPage">
-  <div class="anwserContainer">
-    THIS IS THE ANWSER PAGE.
+<template name="answerPage">
+  <div class="answerContainer">
+    {{theQuestion.questionText}}
   </div>
 </template>
