--- a/scavenger/client/templates/question.html
+++ b/scavenger/client/templates/question.html
@@ -2,9 +2,9 @@
 
   <div class="qBox">
 
-    <span class="qBoxLeft">1.</span>
+    <span class="qBoxLeft">{{questionNumber}}</span>
       <span class="qBoxMiddle">
-        The question in question is all about quesitons who knows what the question will be after it has become  question?The question in question is all about quesitons.
+        <div>{{questionText}}</div>
       </span>
     <span class="anwserTheQ">Click to anwser</span>
 
