--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -113,4 +113,47 @@ body {
   font-size: 5em;
   border: solid thin black; }
 
+.questionText {
+  font-size: 40px;
+  color: white; }
+
+.answerContainer {
+  padding: 20px; }
+  .answerContainer textarea {
+    width: 100%;
+    height: 200px; }
+
+.itemCheckFrm {
+  font-size: 36px; }
+
+.radioBtn {
+  width: 36px;
+  height: 36px; }
+
+.PicGPSContainer {
+  width: 100%; }
+
+.gpsBox {
+  display: inline-block;
+  padding-left: .5%;
+  width: 49%;
+  height: 400px;
+  background: #eff0c7; }
+
+.picBox {
+  display: inline-block;
+  padding-right: .5%;
+  width: 49%;
+  height: 400px;
+  background: #eff0c7; }
+
+.anwserDebug {
+  background: #e43cff; }
+
+.submitAnswerBtn {
+  text-align: center;
+  width: 100%;
+  background: #409646;
+  font-size: 72px; }
+
 /*# sourceMappingURL=main.css.map */
