--- a/scavenger/client/templates/question.html
+++ b/scavenger/client/templates/question.html
@@ -6,7 +6,7 @@
       <span class="qBoxMiddle">
         <div>{{questionText}}</div>
       </span>
-    <span class="anwserTheQ">Click to anwser</span>
+    <span class="anwserTheQ">Tap to anwser</span>
 
   </div>
 
