--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -1,6 +1,7 @@
 body{
   background: #A1D7D9;
   text-align: center;
+  font-family: sans-serif;
 }
 .off{
   display: none;
@@ -58,12 +59,15 @@ body{
 .logoutBtn{
   // border: purple 1px solid;
   float: left;
-  background: purple;
+  background: red;
   height:100%;
-  width: 10%;
+  width: 15%;
   vertical-align: middle;
   text-align: center;
   font-size: 24px;
+}
+.logoutBtn:active{
+  background: rgb(112, 17, 17);
 }
 .heroImg{
   width:100%;
@@ -116,9 +120,12 @@ body{
   width: 20%;
   padding-top: 50px;
 }
+.anwserTheQ:active{
+  background: yellow;
+}
 .dashBanner{
   height: 150px;
-  width: 100%;
+  width: 101%;
   vertical-align: middle;
   background: rgb(40, 86, 163);
   font-size:36px;
@@ -133,32 +140,51 @@ body{
   color: white;
 }
 .answerContainer{
-  padding: 20px;
+  //padding: 20px;
   textarea{
     width: 100%;
     height: 200px;
   }
+  textarea::-webkit-input-placeholder {
+    font-size: 36px;
+  }
+  textarea::-webkit-input-placeholder {
+   font-size: 36px;
+  }
+  textarea:-moz-placeholder { /* Firefox 18- */
+   font-size: 36px;
+  }
+  textarea::-moz-placeholder {  /* Firefox 19+ */
+   font-size: 36px;
+  }
+  textarea:-ms-input-placeholder {
+   font-size: 36px; 
+  }
 }
 .itemCheckFrm{
-  font-size:36px;
+  display: inline-block;
+  font-size: 36px;
+  margin-top: 50px;
 }
 .radioBtn{
-  width: 36px;
-  height: 36px;
+  width: 42px;
+  height: 42px;
 }
 .PicGPSContainer{
   width:100%;
 }
 .gpsBox{
   display: inline-block;
-  padding-left:.5%;
+  //padding-left:.5%;
+  float: right;
   width:49%;
   height:400px;
   background: rgb(239, 240, 199);
 }
 .picBox{
   display: inline-block;
-  padding-right:.5%;
+  //padding-right:.5%;
+  float: left;
   width:49%;
   height:400px;
   background: rgb(239, 240, 199);
@@ -168,10 +194,24 @@ body{
 }
 .submitAnswerBtn{
   text-align: center;
-  width: 100%;
+  width: 80%;
+  height: 100px;
+  margin-left:10%;
   background: rgb(64, 150, 70);
   font-size: 72px;
 }
+.submitAnswerBtn:active{
+  background: rgb(97, 251, 107);
+}
 .backToQsBtn{
-
+  float: left;
+  background: purple;
+  height:100%;
+  width: 15%;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 24px;
+}
+.backToQsBtn:active{
+  background: rgb(49, 28, 51);
 }
