added an animation and icons for answer types

--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -11,6 +11,7 @@
     </div>
 
     <br><br><br>
+    <!-- {{> shortGray}} -->
     {{#if theQuestion.isSA}}
     <textarea id='sa-answer' placeholder="{{#if theQuestion.shortAnswer}}
     {{theQuestion.shortAnswer}}{{else}} Enter your short anwser here {{/if}}"></textarea>
