--- a/scavenger/client/templates/loginPg.html
+++ b/scavenger/client/templates/loginPg.html
@@ -8,7 +8,7 @@
     <br><br>
     or just log in if you've already signed up.
     <div class="off modalGrey">
-      <div class="off modalBox" id="regModal">
+      <div class="off modalBox animated slideInUp" id="regModal">
         <br><br>
         {{> register}}
       </div>
