no more api calls in controllers, begin work on detail page factory, troubleshoot why combined error and capacity filters arent working

--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -16,11 +16,11 @@
     {{theQuestion.shortAnswer}}{{else}} Enter your short anwser here {{/if}}"></textarea>
     {{/if}}
     <br><br><br>
-
+    <span id='uploadPic' class="picBox">this is where we'll do pic uploads</span>
     <div class="PicGPSContainer">
-      {{#if theQuestion.isPic}}
-      <span class="picBox">this is where we'll do pic uploads</span>
-      {{/if}}
+      <!-- {{#if theQuestion.isPic}} -->
+
+      <!-- {{/if}} -->
       {{#if theQuestion.isGPS}}
       <span class="gpsBox">this is where the google map will go</span>
       {{/if}}
