--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -158,7 +158,7 @@ body{
    font-size: 36px;
   }
   textarea:-ms-input-placeholder {
-   font-size: 36px; 
+   font-size: 36px;
   }
 }
 .itemCheckFrm{
@@ -177,7 +177,7 @@ body{
   display: inline-block;
   //padding-left:.5%;
   float: right;
-  width:49%;
+  max-width:49%;
   height:400px;
   background: rgb(239, 240, 199);
 }
