google map shows user location with marker

--- a/scavenger/client/templates/answerPage.html
+++ b/scavenger/client/templates/answerPage.html
@@ -28,7 +28,7 @@
         </span>
       {{/if}}
       {{#if theQuestion.isGPS}}
-        <span class="gpsBox">this is where the google map will go</span>
+        {{>map}}
       {{/if}}
     </div>
 
