--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #A1D7D9;
+  background: #eee;
   text-align: center;
   font-family: sans-serif; }
 
@@ -7,18 +7,26 @@ body {
   display: none; }
 
 .loginArea {
+  background: #A1D7D9;
   display: inline-block;
-  height: 300px;
+  width: 100%;
   font-size: 24px; }
+
+.loginContainer {
+  display: inline-block;
+  position: relative;
+  background: #A1D7D9;
+  height: 100%;
+  width: 100%; }
 
 .eachLogin {
   text-align: center;
   height: 70px;
-  font-size: 36px; }
+  font-size: 24px; }
   .eachLogin input {
     height: 60px;
     width: 300px;
-    font-size: 34px; }
+    font-size: 24px; }
 
 .needRegBtn {
   display: inline-block;
@@ -39,28 +47,54 @@ body {
 .modalBox {
   background: #A1D7D9;
   position: absolute;
-  top: 35%;
-  left: 25%;
-  width: 50%;
-  height: 30%;
+  top: 5%;
+  left: 0%;
+  width: 100%;
+  height: 450px;
+  padding: 10px;
   z-index: 15; }
   .modalBox input {
     height: 60px;
     width: 300px;
-    font-size: 34px;
+    font-size: 24px;
     z-index: 17; }
 
-.logoutBtn {
+.hamburger {
   float: left;
-  background: red;
+  background: #327d80;
   height: 100%;
   width: 15%;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 18px;
+  z-index: 50; }
+
+.hamburger:active {
+  background: #045e4b; }
+
+.hamMenu {
+  background: #327d80;
+  position: absolute;
+  top: 150px;
+  width: 50%;
+  height: 100%;
+  z-index: 15; }
+
+.logoutBtn {
+  background: red;
+  width: 100%;
   vertical-align: middle;
   text-align: center;
   font-size: 24px; }
 
 .logoutBtn:active {
   background: #701111; }
+
+.dashTitle {
+  font-size: 64px;
+  color: #35b0b5;
+  font-family: sans-serif;
+  float: left; }
 
 .heroImg {
   width: 100%; }
@@ -72,61 +106,70 @@ body {
 .qBox {
   position: relative;
   width: 80%;
-  height: 150px;
-  margin-left: 10%;
+  height: 125px;
+  margin-left: 15%;
   background: #bfe4dc;
-  display: block; }
+  border: black 1px solid; }
+  .qBox .answered {
+    background: #5fb948; }
 
 .qBoxLeft {
-  position: absolute;
-  padding-top: 30px;
+  float: left;
+  display: inline-block;
+  padding-top: 15px;
   box-sizing: border-box;
   top: 0px;
   left: 0px;
-  background: white;
-  font-size: 72px;
+  background: #A1D7D9;
+  font-size: 48px;
   height: 100%;
   width: 20%; }
+  .qBoxLeft .answered {
+    color: #5fb948;
+    background: #5fb948; }
 
 .qBoxMiddle {
+  float: left;
   display: inline-block;
   box-sizing: border-box;
   padding: 15px;
-  font-size: 24px;
-  width: 60%;
+  font-size: 18px;
+  width: 40%;
   height: 100%;
-  padding-top: 20px; }
+  padding-top: 20px;
+  background: #eee; }
 
 .anwserTheQ {
-  font-size: 36px;
-  position: absolute;
+  float: left;
+  font-size: 24px;
   box-sizing: border-box;
-  background: white;
+  background: #A1D7D9;
   height: 100%;
-  width: 20%;
-  padding-top: 50px; }
-
-.anwserTheQ:active {
-  background: yellow; }
+  width: 40%; }
+  .anwserTheQ .answered {
+    color: #5fb948;
+    background: #5fb948; }
 
 .dashBanner {
   height: 150px;
   width: 101%;
   vertical-align: middle;
-  background: #2856a3;
-  font-size: 36px; }
+  background: #A1D7D9;
+  color: #35b0b5;
+  font-size: 24px; }
 
 .question {
   font-size: 5em;
   border: solid thin black; }
 
 .questionText {
-  font-size: 40px;
-  color: white; }
+  font-size: 36px;
+  color: #eee; }
 
 .answerContainer textarea {
   width: 100%;
-  height: 200px; }
+  height: 200px;
+  border: 1px black solid; }
 .answerContainer textarea::-webkit-input-placeholder {
   font-size: 36px; }
 .answerContainer textarea::-webkit-input-placeholder {
@@ -142,7 +185,7 @@ body {
 
 .itemCheckFrm {
   display: inline-block;
-  font-size: 36px;
+  font-size: 24px;
   margin-top: 50px; }
 
 .radioBtn {
@@ -150,24 +193,29 @@ body {
   height: 42px; }
 
 .PicGPSContainer {
-  width: 100%; }
+  width: 100%;
+  display: inline-block; }
 
 .gpsBox {
   display: inline-block;
   float: right;
-  width: 49%;
-  height: 400px;
+  max-width: 49%;
+  height: 300px;
   background: #eff0c7; }
 
 .picBox {
   display: inline-block;
   float: left;
   width: 49%;
-  height: 400px;
+  height: 300px;
   background: #eff0c7; }
 
 .anwserDebug {
   background: #e43cff; }
+
+.submitBtnContainer {
+  width: 100%;
+  margin-top: 10px; }
 
 .submitAnswerBtn {
   text-align: center;
@@ -175,7 +223,7 @@ body {
   height: 100px;
   margin-left: 10%;
   background: #409646;
-  font-size: 72px; }
+  font-size: 48px; }
 
 .submitAnswerBtn:active {
   background: #61fb6b; }
@@ -187,7 +235,7 @@ body {
   width: 15%;
   vertical-align: middle;
   text-align: center;
-  font-size: 24px; }
+  font-size: 18px; }
 
 .backToQsBtn:active {
   background: #311c33; }
