--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -244,7 +244,7 @@ body{
 .picBox{
   display: inline-block;
   //padding-right:.5%;
-  float: left;
+  // float: left;
   width:49%;
   height:300px;
   background: rgb(239, 240, 199);
