--- a/scavenger/client/templates/loginPg.html
+++ b/scavenger/client/templates/loginPg.html
@@ -1,20 +1,22 @@
-
 <template name ="loginPg">
-  <img src="images/2016CSHlogo.jpg" class="heroImg">
-  <div class="loginArea"><br>
-    <div class="needRegBtn">
-      Click here to sign up!<br>
-    </div>
-    <br><br>
-    or just log in if you've already signed up.
-    <div class="off modalGrey">
-      <div class="off modalBox animated slideInUp" id="regModal">
-        <br><br>
-        {{> register}}
+  <div class="loginContainer">
+    <img src="images/2016CSHlogo.jpg" class="heroImg" height="550px">
+    <div class="loginArea"><br>
+      <div class="needRegBtn">
+        Click here to sign up!<br>
+      </div>
+      <br><br>
+      or just log in if you've already signed up.
+      <div class="off modalGrey">
+        <div class="off modalBox animated slideInUp" id="regModal">
+          <br><br>
+          {{> register}}
+        </div>
+      </div>
+      <div class="needLog">
+        {{> login}}
       </div>
     </div>
-    <div class="needLog">
-      {{> login}}
-    </div>
+    <br>
   </div>
 </template>
