--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -7,17 +7,21 @@ body {
   display: none; }
 
 .loginArea {
-  background: #A1D7D9;
+  background-color: #A1D7D9;
   display: inline-block;
   width: 100%;
   font-size: 24px; }
 
 .loginContainer {
-  display: inline-block;
-  position: relative;
-  background: #A1D7D9;
+  position: fixed;
+  top: 0;
+  background-color: #A1D7D9;
   height: 100%;
   width: 100%; }
+  .loginContainer .heroImg {
+    width: 95%;
+    margin: 2% 0 0 2.5%;
+    height: 200px; }
 
 .eachLogin {
   text-align: center;
@@ -26,14 +30,18 @@ body {
   .eachLogin input {
     height: 60px;
     width: 300px;
-    font-size: 24px; }
+    font-size: 24px;
+    margin: 1% 0 0 0; }
 
 .needRegBtn {
   display: inline-block;
   background: #73948d;
-  width: 300px;
+  width: 100%;
   padding: 15px;
-  text-align: center; }
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0; }
 
 .modalGrey {
   background: rgba(115, 148, 141, 0.5);
