--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -8,7 +8,7 @@ body{
   display: none;
 }
 .loginArea{
-  background: #A1D7D9;
+  background-color: #A1D7D9;
   display: inline-block;
   //border: green 1px solid;
   //height: 100%;
@@ -16,12 +16,16 @@ body{
   font-size: 24px;
 }
 .loginContainer{
-  display: inline-block;
-  position: relative;
-  background: #A1D7D9;
+  position: fixed;
+  top: 0;
+  background-color: #A1D7D9;
   height: 100%;
   width: 100%;
-
+  .heroImg{
+    width: 95%;
+    margin: 2% 0 0 2.5%;
+    height: 200px;
+  }
 }
 .eachLogin{
   text-align: center;
@@ -32,14 +36,18 @@ body{
     height:60px;
     width: 300px;
     font-size: 24px;
+    margin: 1% 0 0 0;
   }
 }
 .needRegBtn{
   display: inline-block;
   background: rgb(115, 148, 141);
-  width: 300px;
+  width: 100%;
   padding:15px;
   text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 .modalGrey{
   background: rgba(115, 148, 141, .5);
