add sponsors template to login view, move buttons in registration modal

--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -49,6 +49,16 @@ body{
   bottom: 0;
   left: 0;
 }
+.login-sponsor-text{
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  margin: 200px 0 0 0;
+}
+.cc-logo{
+  width: 95%;
+  height: 50px;
+}
 .modalGrey{
   background: rgba(115, 148, 141, .5);
   width: 100%;
@@ -75,6 +85,7 @@ body{
     width: 300px;
     font-size: 24px;
     z-index: 17;
+    margin: -50px 0 0 0;
   }
 }
 .hamburger{
