--- a/scavenger/client/templates/loginPg.html
+++ b/scavenger/client/templates/loginPg.html
@@ -8,7 +8,7 @@
       <div class="needLog">
         {{> login}}
       </div>
-
+       {{> loginSponsors}}
       <div class="needRegBtn">
         Click here to sign up!<br>
       </div>
