--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -71,6 +71,9 @@ body{
 }
 .hamburger{
   // border: purple 1px solid;
+  display: visible;
+  padding-top: 40px;
+  box-sizing: border-box;
   float: left;
   background: #327d80;
   height:100%;
@@ -86,7 +89,7 @@ body{
 .hamMenu{
   background: #327d80;
   position: absolute;
-  top: 150px;
+  top: 100px;
   width: 50%;
   height: 100%;
   z-index: 15;
@@ -102,11 +105,28 @@ body{
 .logoutBtn:active{
   background: rgb(112, 17, 17);
 }
+.dashBanner{
+  //position: fixed;
+  height: 100px;
+  width: 100%;
+  vertical-align: middle;
+  background: #A1D7D9;
+  color:  #35b0b5;
+  font-size:24px;
+}
+.dashLogin{
+  margin-top: -20px;
+  font-size: 28px;
+  color: #35b0b5;
+  font-family: sans-serif;
+  float: left;
+}
 .dashTitle{
   font-size: 64px;
   color: #35b0b5;
   font-family: sans-serif;
   float: left;
+  margin-top: -35px;
 }
 .heroImg{
   width:100%;
@@ -177,16 +197,6 @@ body{
     background: rgb(95, 185, 72);
   }
 }
-.dashBanner{
-  //position: fixed;
-  height: 150px;
-  width: 101%;
-  vertical-align: middle;
-  background: #A1D7D9;
-  color:  #35b0b5;
-  font-size:24px;
-}
-
 .question{
   font-size: 5em;
   border: solid thin black;
