--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -33,6 +33,9 @@ body {
     font-size: 24px;
     margin: 1% 0 0 0; }
 
+.sponsorImgs {
+  border-top: 1px #327d80 solid; }
+
 .needRegBtn {
   display: inline-block;
   background: #73948d;
@@ -56,9 +59,8 @@ body {
   background: #A1D7D9;
   position: absolute;
   top: 5%;
-  left: 0%;
-  width: 100%;
-  height: 450px;
+  left: 5%;
+  width: 85%;
   padding: 10px;
   z-index: 15; }
   .modalBox input {
@@ -86,13 +88,20 @@ body {
 .hamMenu {
   background: #327d80;
   position: absolute;
-  top: 100px;
+  top: 0px;
   width: 50%;
   height: 100%;
   z-index: 15; }
 
+.iconDesc {
+  width: 80;
+  text-align: center;
+  font-size: 12px;
+  color: #A1D7D9;
+  border-bottom: 1px solid #A1D7D9; }
+
 .logoutBtn {
-  background: red;
+  color: red;
   width: 100%;
   vertical-align: middle;
   text-align: center;
