--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -39,6 +39,9 @@ body{
     margin: 1% 0 0 0;
   }
 }
+.sponsorImgs{
+  border-top: 1px #327d80 solid;
+}
 .needRegBtn{
   display: inline-block;
   background: rgb(115, 148, 141);
@@ -62,13 +65,11 @@ body{
   background: #A1D7D9;
   position: absolute;
   top: 5%;
-  left: 0%;
-  width: 100%;
+  left: 5%;
+  width: 85%;
   //width: 50%;
-  height: 450px;
+  //height: 450px;
   padding: 10px;
-  // margin-top: 40%;
-  // margin-left: 25%;
   z-index: 15;
   input{
     height:60px;
@@ -97,14 +98,22 @@ body{
 .hamMenu{
   background: #327d80;
   position: absolute;
-  top: 100px;
+  top: 0px;
   width: 50%;
   height: 100%;
   z-index: 15;
 }
+.iconDesc{
+  width: 80;
+  text-align: center;
+  font-size: 12px;
+  color: #A1D7D9;
+  border-bottom: 1px solid #A1D7D9;
+}
 .logoutBtn{
   // border: purple 1px solid;
-  background: red;
+  //background: red;
+  color: red;
   width: 100%;
   vertical-align: middle;
   text-align: center;
