--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -6,13 +6,16 @@
 
         <div class="hamMenu off animate slideInLeft">
           <br><br>
+          <div class="iconDesc">
+            ICON LEGEND:<br><br>
+            {{> shortWhite}}<br>A question with this icon requires a short written answer.<br><br>
+            {{> picWhite}}<br>A question with this icon requires a picture to be uploaded<br><br>
+            {{> itemWhite}}<br>A question with this icon requires a specific item to be obtained<br><br>
+          </div><br>
           <ul>
-            <!-- <li>show all questions</li>
-            <li>show only answered questions</li>
-            <li>show only unanswered questions</li> -->
-            <li>about the hunt</li><br>
-            <li>Sponsors</li><br>
-            <li><span class="logoutBtn">-Logout-</span></li><br>
+            <li class="menuOpt">about the hunt</li><br>
+            <li class="menuOpt">Sponsors</li><br>
+            <li class="logoutBtn">Logout</li><br>
           </ul>
         </div>
       </div>
