--- a/scavenger/client/templates/loginPg.html
+++ b/scavenger/client/templates/loginPg.html
@@ -20,6 +20,14 @@
         </div>
       </div>
     </div>
-    <br>
+    <br><br><br><br><br><br>
+    <div class='sponsorImgs'>
+      <br><br>
+      Presented by:<br>
+      <img src="images/cc_logo_7_color..png" height="50px" width="50%"><br>
+      With Generous support from:<br>
+      <img src="images/Triangle Family Dentistry logo-img.png" height="50px"><br>
+      <img src="images/Carolina Ortho & Peds Logo FINAL (Filled Braces)-img.png" height="50px"><br>
+    </div>
   </div>
 </template>
