--- a/scavenger/client/styles/main.scss
+++ b/scavenger/client/styles/main.scss
@@ -68,7 +68,7 @@ body{
   left: 5%;
   width: 85%;
   //width: 50%;
-  //height: 450px;
+  height: 500px;
   padding: 10px;
   z-index: 15;
   input{
@@ -102,6 +102,26 @@ body{
   width: 50%;
   height: 100%;
   z-index: 15;
+}
+.menuOpt:active{
+  background: #045e4b;
+}
+.back{
+    // border: purple 1px solid;
+    display: visible;
+    padding-top: 20px;
+    box-sizing: border-box;
+    float: left;
+    background: #327d80;
+    height:100%;
+    width: 15%;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 18px;
+    z-index: 50;
+}
+.back:active{
+  background: #045e4b;
 }
 .iconDesc{
   width: 80;
