--- a/scavenger/client/templates/dashboard.html
+++ b/scavenger/client/templates/dashboard.html
@@ -13,8 +13,8 @@
             {{> itemWhite}}<br>A question with this icon requires a specific item to be obtained<br><br>
           </div><br>
           <ul>
-            <li class="menuOpt">about the hunt</li><br>
-            <li class="menuOpt">Sponsors</li><br>
+            <li class="menuOpt aboutPg">about the hunt</li><br>
+            <li class="menuOpt sponsorsPg">Sponsors</li><br>
             <li class="logoutBtn">Logout</li><br>
           </ul>
         </div>
