--- a/scavenger/client/templates/login-sponsors.html
+++ b/scavenger/client/templates/login-sponsors.html
@@ -3,4 +3,6 @@
     Brought to you by:
   </div>
   <img class="cc-logo" src="images/cc_logo_7_color..png">
+  <img class="TFD-logo" src="images/TFD-logo.png">
+  <img class="COD-logo" src="images/COD-logo.png">
 </template>
