--- a/scavenger/client/templates/register.html
+++ b/scavenger/client/templates/register.html
@@ -2,9 +2,10 @@
   Please use the same e-mail address you used to<br> register for the scavenger hunt to sign up<br> for this app! <br><br>
     <form class="eachLogin" id="userRegFrm">
         <input type="email" name="registerEmail" placeholder="E-mail Address">
-        <br><br>
+        <br>
         <input type="password" name="registerPassword" placeholder="Choose A Password">
-        <br><br>
+        <br>
+        <input type="password" name="confirmPassword" placeholder="Confirm Password">
         <input type="submit">
         <br><br>
         <div class="cancelReg">Cancel</div>
