--- a/scavenger/client/templates/login-sponsors.html
+++ b/scavenger/client/templates/login-sponsors.html
@@ -1,9 +1,11 @@
 <template name='loginSponsors'>
-  <div class='login-sponsor-text'>
+  <div class='login-presented-text'>
     Presented by:
   </div>
   <img class="cc-logo" src="images/cc_logo_7_color..png"><br>
-  With generous support from:
+  <div class="login-sponsor-text">
+    With generous support from:
+  </div>
   <img class="TFD-logo" src="images/TFD-logo.png">
   <img class="COD-logo" src="images/COD-logo.png">
 </template>
