--- a/scavenger/client/styles/main.css
+++ b/scavenger/client/styles/main.css
@@ -30,8 +30,23 @@ body {
   .eachLogin input {
     height: 60px;
     width: 300px;
-    font-size: 24px;
+    font-size: 20px;
     margin: 1% 0 0 0; }
+
+.regModalText {
+  font-size: 14px;
+  margin: -20px 0 0 0; }
+
+.regLogin {
+  text-align: center;
+  height: 70px;
+  font-size: 24px;
+  margin: 50px 0 0 0; }
+  .regLogin input {
+    height: 60px;
+    width: 300px;
+    font-size: 20px;
+    margin: 3% 0 3% 0; }
 
 .sponsorImgs {
   border-top: 1px #327d80 solid; }
@@ -46,11 +61,15 @@ body {
   bottom: 0;
   left: 0; }
 
-.login-sponsor-text {
+.login-presented-text {
   width: 100%;
   text-align: center;
   font-size: 16px;
   margin: 150px 0 0 0; }
+
+.login-sponsor-text {
+  font-size: 14px;
+  margin: -5px 0 5px 0; }
 
 .cc-logo {
   width: 95%;
