--- a/scavenger/client/templates/register.html
+++ b/scavenger/client/templates/register.html
@@ -1,11 +1,17 @@
 <template name="register">
-  Please use the same e-mail address you used to<br> register for the scavenger hunt to sign up<br> for this app! <br><br>
-    <form class="eachLogin" id="userRegFrm">
-        <input type="email" name="registerEmail" placeholder="E-mail Address">
-        <br>
-        <input type="password" name="registerPassword" placeholder="Choose A Password">
-        <br>
-        <input type="password" name="confirmPassword" placeholder="Confirm Password">
+  <div class="regModalText">
+  Enter the same e-mail address you used  register for the scavenger hunt to sign up for this app!
+  </div>
+
+    <form class="regLogin" id="userRegFrm">
+        <input id="regEmail" type="email" name="registerEmail" placeholder="E-mail Address">
+        <br><br>
+        <input id="regName" type="text" name="registerName" placeholder= "User Name">
+        <br><br>
+        <input id="regPass" type="password" name="registerPassword" placeholder="Choose A Password">
+        <br><br>
+        <input id="regPassConf" type="password" name="confirmPassword" placeholder="Confirm Password">
+        <br><br>
         <input type="submit">
         <br><br>
         <div class="cancelReg">Cancel</div>
